# serpapi-python

./: .cursorrules  .gitignore  .readthedocs.yaml  GEMINI.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.md.erb  Rakefile  pylint.rc  pyproject.toml  pytest.ini  requirements.txt  setup.py  t.py
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
examples/: async_batch_search.py  basic_usage.py  multiple_engines.py
oobt/: demo.py
serpapi/: __init__.py  __version__.py  _version.py  client.py  core.py  error.py  exceptions.py  http.py  models.py  object_decoder.py  serpapi.py  textui.py  utils.py  version.py
tests/: __init__.py  conftest.py  example_search_apple_app_store.py  example_search_apple_app_store_test.py  example_search_baidu.py  example_search_baidu_test.py  example_search_bing.py  example_search_bing_test.py  example_search_duckduckgo.py  example_search_duckduckgo_test.py  example_search_ebay.py  example_search_ebay_test.py  example_search_google_autocomplete.py  example_search_google_autocomplete_test.py  example_search_google_events.py  example_search_google_events_test.py  example_search_google_images.py  example_search_google_images_test.py  example_search_google_jobs.py  example_search_google_jobs_test.py  example_search_google_local_services.py  example_search_google_local_services_test.py  example_search_google_maps.py  example_search_google_maps_test.py  example_search_google_play.py  example_search_google_play_test.py  example_search_google_product.py  example_search_google_product_test.py  example_search_google_reverse_image.py  example_search_google_reverse_image_test.py  example_search_google_scholar.py  example_search_google_scholar_test.py  example_search_google_search.py  example_search_google_test.py  example_search_home_depot.py  example_search_home_depot_test.py  example_search_naver.py  example_search_naver_test.py  example_search_walmart.py  example_search_walmart_test.py  (+17 more)
